--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "v-charts": "^1.16.13",
     "vant": "^1.1.4",
     "vue": "^2.5.2",
+    "vue-axios": "^2.1.1",
     "vue-echarts": "^3.0.7",
     "vue-i18n": "^7.6.0",
     "vue-router": "^3.0.1",
