--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "vue-echarts": "^3.0.7",
     "vue-i18n": "^7.6.0",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "weixin-js-sdk": "^1.3.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
