--- a/.babelrc
+++ b/.babelrc
@@ -8,5 +8,16 @@
     }],
     "stage-2"
   ],
-  "plugins": ["transform-vue-jsx", "transform-runtime"]
+  "plugins": [
+    [
+      "component",
+      {
+        "libraryName": "element-ui",
+        "styleLibraryName": "theme-chalk"
+      }
+    ],
+    "transform-vue-jsx",
+    "transform-runtime"
+
+  ]
 }
