--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "element-ui": "^2.3.9",
     "lodash": "^4.17.10",
     "moment": "^2.22.1",
+    "qs": "^6.5.2",
     "v-charts": "^1.16.13",
     "vant": "^1.1.4",
     "vue": "^2.5.2",
@@ -30,6 +31,8 @@
     "babel-core": "^6.22.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-loader": "^7.1.1",
+    "babel-plugin-component": "^1.1.1",
+    "babel-plugin-import": "^1.7.0",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-plugin-transform-vue-jsx": "^3.5.0",
